# Pyfrontkit

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yaml
Pyfront/: __init__.py  content.py  css.py  special.py  tags.py  void_elements.py
docs/: template.md
example/profesional_example/: index.html  profeesional-example.py  style.css
example/simple example/: index.html  simple _example.py  style.css
example/styled example(inline )/ex1/: example_wiht_css.py  index.html  style.css
example/styled example(inline )/ex2/: example2_with_css.py  index.html  style.css
examples/example_3/: test.py
examples/example_3/src/main/python/: main.py
pyfrontkit/: __init__.py  block.py  content.py  css.py  css_register.py  dom.py  html_doc.py  special.py  style_manager.py  tags.py  void_element.py
pyfrontkit.egg-info/: PKG-INFO  SOURCES.txt
pyfrontkit/css/: fonts.py
pyfrontkit/css/create_color/: create_colors.py
pyfrontkit/helpers/: fs.py
